--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -14,8 +14,8 @@
     <!-- This is what the counts will look like -->
     <!-- <span id="tree-count">4567</span> trees, <span id="planting-site-count">10,683</span> planting sites -->
   </div>
-  <a href="javascript:;" class="btn btn-mini exportBtn"><i class="icon-share"></i> Export Search Results</a>
-  <a href="javascript:;" class="btn addBtn">Add a Tree</a>
+  <a href="javascript:;" class="btn btn-primary btn-mini exportBtn"><i class="icon-share"></i> Export Search Results</a>
+  <a href="javascript:;" class="btn btn-primary addBtn">Add a Tree</a>
 </div>
 {% endblock subhead %}
 
