--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -8,6 +8,7 @@
 @import "partials/navbar";
 @import "partials/header";
 @import "partials/footer";
+@import "partials/error";
 
 // -- Page Specific
 @import "partials/map";
