Fix <p> tag styling/color

--- a/opentreemap/treemap/css/sass/partials/_registration.scss
+++ b/opentreemap/treemap/css/sass/partials/_registration.scss
@@ -26,11 +26,11 @@
     vertical-align: middle;
     border: none;
     background-color: $navbar-color;
-    color: #fff;
     margin-top: 15px;
 
     p {
         margin-bottom: 0;
+        color: #FFF;
     }
     a {
         margin-left: 20px;
