--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -23,7 +23,7 @@
 <div class="search-block-wrapper">
   <!--Species Search-->
   <div class="search-block visible-desktop">
-    <p>{% trans "Search by Species" %}</p>
+    <h3>{% trans "Search by Species" %}</h3>
     <div class="search-field-group">
       <input type="text" data-class="search" id="species-typeahead" placeholder="American basswood"/>
       <input type="hidden" id="search-species" />
@@ -32,7 +32,7 @@
 
   <!-- Location Search -->
   <div class="search-block">
-    <p>{% trans "Search by Location" %}</p>
+    <h3>{% trans "Search by Location" %}</h3>
     <div class="search-field-group">
       <input type="text" data-class="search" id="boundary-typeahead" placeholder="340 N 12th St, Philadelphia"/>
       <input type="hidden" id="boundary" />
