--- a/opentreemap/treemap/templates/registration/login.html
+++ b/opentreemap/treemap/templates/registration/login.html
@@ -33,6 +33,7 @@
         $('input[type="text"]').addClass('input-xlarge');
         $('input[type="password"]').addClass('input-xlarge');
         $('input[name="username"]').focus();
+        $('ul.errorlist').addClass('alert alert-error');
     })
 })(require);
 </script>
