--- a/opentreemap/treemap/templates/registration/registration_form.html
+++ b/opentreemap/treemap/templates/registration/registration_form.html
@@ -48,6 +48,7 @@
         $('div.content input[type="text"]').addClass('input-block-level');
         $('div.content input[type="password"]').addClass('input-block-level');
         $('div.content input[type="file"]').addClass('profile-photo-upload');
+        $('ul.errorlist').addClass('alert alert-error');
     })
 })(require);
 </script>
