--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -36,14 +36,23 @@
     display: inline-block;
 
     .search-block {
-        padding: 8px;
-        border: 1px solid #eee;
-        border-radius: 3px;
+        padding: 12px 14px;
+        background: $light-gray-color;
+        border: 1px solid $well-color;
+        border-radius: 6px;
         float: left;
         margin-left: 10px;
 
+        h3 {
+            font-size: em(14px);
+            font-weight: 400;
+            line-height: 1em;
+            margin: 0 00 6px;
+            color: $navbar-color;
+        }
         input[type="text"] {
             font-size: 0.75em;
+            margin: 0;
         }
 
         .dropdown-menu {
@@ -68,6 +77,46 @@
     #perform-search {
         margin-bottom: 6px;
         padding: 8px 0;
+    }
+}
+
+span.tt-dropdown-menu {
+    margin-top: 10px;
+    padding: 0;
+    width: 221px;
+    font-size: 0.875em;
+    position: relative;
+    border: 1px solid $well-color;
+    background: white;
+    border-radius: 6px;
+    box-shadow: 0px 3px 0px rgba(0, 3, 0, 0.3);
+
+    &:before {
+        content: '';
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-bottom: 10px solid $well-color;
+        top: -10px;
+        left: 10px;
+    }
+    .tt-suggestion {
+        padding: 8px 10px;
+        border-bottom: 1px solid $well-color;
+        
+        &:hover {
+            background-color: $light-gray-color;
+        }
+        &:last-child {
+            border: none;
+        }
+
+        p {
+            line-height: 1.5em;
+            margin: 0;
+        }
     }
 }
 
