--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -43,8 +43,9 @@
             }
 
             > a {
-                padding: 10px 0;
+                padding: 12px 0 8px;
                 height: 20px;
+                font-size: 1.125em;
                 font-weight: 400;
 
                 &:hover,
@@ -59,6 +60,5 @@
 @media (max-width: 767px) {
     .navbar {
         margin: 0;
-        font-size: em(14px);
     }
 }
