--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -2,7 +2,7 @@
 
 .header {
     padding: 59px 15px 15px;
-    height: 75px;
+    height: 85px;
     border-bottom: 1px solid $well-color;
     background: #fff;
 
@@ -27,9 +27,9 @@
 }
 
 .search-wrapper {
-    right: 15px;
-    position: absolute;
-    top: 56px;
+    position: relative;
+    float: right;
+    display: inline-block;
 }
 
 .search-block-wrapper {
@@ -71,12 +71,12 @@
 .search-options {
     display: inline-block;
     margin-left: 15px;
-    top: -18px;
     position: relative;
+    vertical-align: top;
 
     #perform-search {
         margin-bottom: 6px;
-        padding: 8px 0;
+        padding: 12px 0;
     }
 }
 
