Restructure map sidebar, make autocomplete scroll

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -14,6 +14,7 @@
 @import "partials/map";
 @import "partials/treedetails";
 @import "partials/registration";
+@import "partials/createmap";
 @import "partials/profile";
 @import "partials/admin";
 @import "partials/content";
