--- a/opentreemap/treemap/css/sass/partials/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/_map.scss
@@ -23,6 +23,11 @@
     right: 0;
     bottom: 40px;
     
+    > div {
+        height: 100%;
+        overflow: auto;
+    }
+
     .accordion-group {
         border-radius: 0;
         margin-bottom: 0;
@@ -54,11 +59,60 @@
     }
 }
 
-.benefit-label {
-    font-weight: 700;
+#sidebar-add-tree {
+    > .sidebar-inner {
+        padding: 20px;
+    }
 }
 
-.create_instance_map {
-    width: 100%;
-    height: 500px;
+#benefit-values {
+    .benefit-label {
+        font-weight: 700;
+    }
+}
+
+span.tt-dropdown-menu {
+    margin-top: 10px;
+    padding: 0;
+    width: 221px;
+    font-size: 0.875em;
+    position: relative;
+    border: 1px solid $well-color;
+    background: white;
+    border-radius: 6px;
+    box-shadow: 0px 3px 0px rgba(0, 3, 0, 0.3);
+
+    &:before {
+        content: '';
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-bottom: 10px solid $well-color;
+        top: -10px;
+        left: 10px;
+    }
+
+    .tt-suggestions {
+        max-height: 300px;
+        overflow: auto;
+
+        .tt-suggestion {
+            padding: 8px 10px;
+            border-bottom: 1px solid $well-color;
+            
+            &:hover {
+                background-color: $light-gray-color;
+            }
+            &:last-child {
+                border: none;
+            }
+
+            p {
+                line-height: 1.5em;
+                margin: 0;
+            }
+        }
+    }
 }
