--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -3,7 +3,6 @@
 .header {
     padding: 59px 15px 15px;
     height: 85px;
-    border-bottom: 1px solid $well-color;
     background: #fff;
 
     &:before {
@@ -75,7 +74,7 @@
     vertical-align: top;
 
     #perform-search {
-        margin-bottom: 6px;
+        margin-bottom: 7px;
         padding: 12px 0;
     }
 }
@@ -90,7 +89,7 @@
 .subhead {
     padding: 10px 15px;
     border-left: 8px solid $primary-color;
-    border-bottom: 1px solid $well-color;
+    border-top: 1px solid lighten($primary-color, 35%);
     font-size: em(16px);
     background: lighten($primary-color, 50%);
     height: 24px;
