Break sidebar styling into own file, style map popups

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -12,6 +12,7 @@
 
 // -- Page Specific
 @import "partials/map";
+@import "partials/sidebar";
 @import "partials/treedetails";
 @import "partials/registration";
 @import "partials/createmap";
