Make non-map pages pretty with an image

--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -16,6 +16,16 @@ body {
 	@include links;
 }
 
+.image-background {
+	background-image: url(../img/default-background.jpg);
+	height: 500px;
+	position: absolute;
+	z-index: 0;
+	width: 100%;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 .content {
 	position: relative;
 	overflow: auto;
@@ -38,6 +48,8 @@ body {
 	box-shadow: 0 3px 0 gray;
 	box-shadow: 0 3px 0 rgba(0,0,0,.35);
 	margin: 50px auto 90px;
+	position: relative;
+	z-index: 9;
 }
 
 @media (max-width: 767px) {
