--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -32,6 +32,7 @@
   </div>
 </div>
 
+<div class="image-background"></div>
 <div class="container contained tree-details">
   <div class="row">
     <div class="span3">
