--- a/opentreemap/treemap/templates/treemap/index.html
+++ b/opentreemap/treemap/templates/treemap/index.html
@@ -2,6 +2,13 @@
 {% load i18n %}
 
 {% block content %}
-<h1>{{ request.instance.name }}</h1>
-<a href="{% url 'map' instance_url_name=request.instance.url_name %}" class="btn">{% trans "Explore Trees" %}</a>
+<div class="image-background"></div>
+<div class="container contained profile">
+    <div class="row">
+    	<div class="span12">
+			<h1>{{ request.instance.name }}</h1>
+			<a href="{% url 'map' instance_url_name=request.instance.url_name %}" class="btn">{% trans "Explore Trees" %}</a>
+		</div>
+	</div>
+</div>
 {% endblock content %}
