--- a/opentreemap/treemap/templates/treemap/recent_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_edits.html
@@ -14,6 +14,7 @@
 {% endblock header %}
 
 {% block content %}
+<div class="image-background"></div>
 <div class="container contained profile">
   <div class="row">
     <div class="span12">
