--- a/opentreemap/treemap/templates/treemap/recent_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_edits.html
@@ -4,6 +4,9 @@
 
 {% block page_title %} | {% trans "Recent Edits" %} {{plot.pk}}{% endblock %}
 
+{% block subhead %}
+{% endblock subhead %}
+
 {% block header %}
 {% load i18n %}
 <div class="header">
