--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -14,7 +14,7 @@ body {
 h1, h2, h3, h4, h4, h5 {
 	font-family: $base-font-family;
 	font-weight: 300;
-	margin: 1em 0 0.5em;
+	margin: 0 0 0.75em;
 }
 
 p, li {
