Specify search code in separate block so it applies to all instance pages

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -119,6 +119,8 @@
 
     {% block scripts %}
     {% endblock scripts %}
+    {% block searchscripts %}
+    {% endblock searchscripts %}
 
     {% block endbody %}
     {% endblock endbody %}
