--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -59,13 +59,13 @@
 </div>
 {% endblock advancedsearch %}
 
-{% block scripts %}
+{% block searchscripts %}
 <script type="text/javascript">
     (function(require) {
         require("searchBar").init(otm.settings);
     })(require);
 </script>
-{% endblock scripts %}
+{% endblock searchscripts %}
 
 {% block templates %}
 {% verbatim %}
