--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -6,7 +6,7 @@
 {% block head_extra %}
 {% endblock head_extra %}
 
-{% block scripts %}
+{% block searchscripts %}
 <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 (function(require) {
@@ -18,7 +18,7 @@
     })
 })(require);
 </script>
-{% endblock scripts %}
+{% endblock searchscripts %}
 
 {% block content %}
 <div class="content map">
