--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -197,9 +197,7 @@
 <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 (function(require, config) {
-      var app = require('app'),
-          plot = require('plot');
-      app.init(config);
+      var plot = require('plot');
       plot.init({
           config: config,
           inlineEditForm: {
